syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Calls.AlterEntityInstance";

package EmissaryABI;

message AlterEntityInstanceCall {}
message AlterEntityInstanceReturn {}