syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Calls.ApplyPhysicsToEntityInstance";

package EmissaryABI;

message ApplyPhysicsToEntityInstanceCall {}
message ApplyPhysicsToEntityInstanceReturn {}
