syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Calls.GenerateStateChange";

package EmissaryABI;

message GenerateStateChangeCall {}
message GenerateStateChangeReturn {}
