syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Calls.RequestDestroyEntityInstance";

package EmissaryABI;

message RequestDestroyEntityInstanceCall {}
message RequestDestroyEntityInstanceReturn {}
