syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Calls.SpawnNewEntityInstance";

package EmissaryABI;

message SpawnNewEntityInstanceCall {}
message SpawnNewEntityInstanceReturn {}
