syntax = "proto3";

option csharp_namespace = "EmissaryABIProtos.Messages.SubscribeToChannel";

package EmissaryABI;

message SubscribeToChannelCall {}
message SubscribeToChannelReturn {}
